fix: cannot scroll but by removing overflow:hidden

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 body {
   background-color: #ffffff;
-  overflow: hidden;
 }
 
 h1 {
   align-items: center;
   text-align: center;
   color: #363636;
+}
+
+.container {
+  margin-top: 30px;
 }
